deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: split-bill-be-service
spec:
  selector:
    app: split-bill-be
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
